--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@400;700&family=Poppins:ital,wght@0,700;1,400&display=swap" rel="stylesheet" />
   </head>
   <body class="bg-blue-100 font-poppins">
-    <div class="flex flex-wrap items-center justify-center ml-56 relative">
+    <div class="flex flex-wrap items-center justify-center relative">
       <div class="container max-w-4xl bg-white rounded shadow-xl m-12">
         <div class="h-96 overflow-hidden rounded-t">
           <img class="w-full rounded-t -mt-36" src="img/ballon.jpg" alt="Photo by David Rodrigo on Unsplash" />
@@ -39,12 +39,13 @@
           <h2 class="text-2xl mt-4 font-bold text-blue-800 text-center">Oky Hari Nurwenda & Reza Reggrina</h2>
 
           <a href="https://goo.gl/maps/cCUqsFgXVKyB3Uti7" target="_blank" class="text-1xl text-center italic text-slate-500 mt-6">
-            <p><ion-icon name="location-outline"></ion-icon>Perumahan Garden View Blok B4 No.5 <ion-icon name="calendar-outline"></ion-icon> 9 Oct 2022 <ion-icon name="time-outline"></ion-icon>15:30</p>
+            <p><ion-icon name="location-outline"></ion-icon>Perumahan Garden View Blok B4 No.5, Jalancagak - Subang</p>
           </a>
+          <p class="text-1xl text-center italic text-slate-500"><ion-icon name="calendar-outline"></ion-icon> 9 Oct 2022 <ion-icon name="time-outline"></ion-icon>15:30</p>
         </div>
       </div>
     </div>
-    <div class="box absolute -z-10 top-0"></div>
+    <!-- <div class="box absolute -z-10 top-0"></div> -->
 
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
     <script type="importmap">
